[package]
name = "clob"
version = "0.1.0"
authors = ["callam <callam@callamdelaney.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.7.0"

[profile.bench]
opt-level = 3
panic = "abort"

[profile.release]
panic = "abort"